[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scripts/bg.gd" type="Script" id=2]
[ext_resource path="res://sprites/background.png" type="Texture" id=3]
[ext_resource path="res://scripts/ship/ship.gd" type="Script" id=4]
[ext_resource path="res://resources/tilesets/room_tiles.tres" type="TileSet" id=5]
[ext_resource path="res://scripts/ship/auto_tile.gd" type="Script" id=6]
[ext_resource path="res://inst_scenes/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/camera.gf.gd" type="Script" id=8]
[ext_resource path="res://scripts/gui.gd" type="Script" id=9]
[ext_resource path="res://sprites/ship/room/room1.png" type="Texture" id=10]
[ext_resource path="res://sprites/ship/life_module.png" type="Texture" id=11]
[ext_resource path="res://sprites/ship/drone_module.png" type="Texture" id=12]
[ext_resource path="res://sprites/ship/port.png" type="Texture" id=13]
[ext_resource path="res://sprites/ship/power_module.png" type="Texture" id=14]
[ext_resource path="res://sprites/ship/ship_core.png" type="Texture" id=15]
[ext_resource path="res://sprites/ship/workshop.png" type="Texture" id=16]

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="bg" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="bg_1" type="Sprite" parent="bg"]

transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="bg_2" type="Sprite" parent="bg"]

transform/pos = Vector2( 3000, 0 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="bg_3" type="Sprite" parent="bg"]

transform/pos = Vector2( 0, 3000 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="bg_9" type="Sprite" parent="bg"]

transform/pos = Vector2( 3000, 3000 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="bg_4" type="Sprite" parent="bg"]

transform/pos = Vector2( -3000, 0 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="bg_8" type="Sprite" parent="bg"]

transform/pos = Vector2( -3000, 3000 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="bg_5" type="Sprite" parent="bg"]

transform/pos = Vector2( 0, -3000 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="bg_6" type="Sprite" parent="bg"]

transform/pos = Vector2( 3000, -3000 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="bg_7" type="Sprite" parent="bg"]

transform/pos = Vector2( -3000, -3000 )
transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Ship" type="RigidBody2D" parent="."]

input/pickable = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
speed = 100

[node name="TileMap" type="TileMap" parent="Ship"]

transform/pos = Vector2( -16, -16 )
mode = 0
tile_set = ExtResource( 5 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )
script/script = ExtResource( 6 )

[node name="player" parent="Ship" instance=ExtResource( 7 )]

transform/pos = Vector2( 32, 0 )

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="gui area" type="ReferenceFrame" parent="CanvasLayer"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 9 )

[node name="drone" type="Container" parent="CanvasLayer/gui area"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="EnergyBar" type="ProgressBar" parent="CanvasLayer/gui area/drone"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 300.0
margin/top = 16.0
margin/right = 300.0
margin/bottom = 48.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 25.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="est_time" type="Label" parent="CanvasLayer/gui area/drone/EnergyBar"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
hint/tooltip = "seconds of power remaining"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 8.0
margin/right = -32.0
margin/bottom = -8.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="inventory" type="RichTextLabel" parent="CanvasLayer/gui area/drone"]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 16.0
margin/right = 200.0
margin/bottom = 120.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="ship" type="Container" parent="CanvasLayer/gui area"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="compass" type="Container" parent="CanvasLayer/gui area/ship"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 16.0
margin/right = 96.0
margin/bottom = 96.0

[node name="compass_needle" type="Polygon2D" parent="CanvasLayer/gui area/ship/compass"]

transform/scale = Vector2( 0.7, 0.7 )
polygon = Vector2Array( -7.09222, 25.4369, 7.60457, 25.4369, 7.60457, -21.0367, 15.1516, -21.0367, 0.0575714, -37.3223, -15.3215, -20.7502, -7.09222, -20.6395 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="always" type="Container" parent="CanvasLayer/gui area"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="info" type="Label" parent="CanvasLayer/gui area/always"]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 100.0
margin/right = 200.0
margin/bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Some random text."
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="messages" type="Label" parent="CanvasLayer/gui area/always"]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 100.0
margin/right = -100.0
margin/bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Some random text."
align = 1
valign = 2
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ship_health" type="ProgressBar" parent="CanvasLayer/gui area/always"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
hint/tooltip = "Ship's overall health"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 96.0
margin/top = 16.0
margin/right = 64.0
margin/bottom = 16.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="ship_energy" type="ProgressBar" parent="CanvasLayer/gui area/always"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
hint/tooltip = "Ship's energy"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 48.0
margin/top = 16.0
margin/right = 16.0
margin/bottom = 16.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="player" type="Container" parent="CanvasLayer/gui area"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="life_support" type="ProgressBar" parent="CanvasLayer/gui area/player"]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 48.0
margin/bottom = 120.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="build" type="Container" parent="CanvasLayer/gui area"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="inventory" type="RichTextLabel" parent="CanvasLayer/gui area/build"]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 16.0
margin/right = 200.0
margin/bottom = 120.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="VButtonArray" type="VButtonArray" parent="CanvasLayer/gui area/build"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 156.0
margin/top = 16.0
margin/right = 120.0
margin/bottom = 16.0
flat = true
button/count = 8
button/min_button_size = 0.0
button/align = 1
button/0/text = ""
button/0/tooltip = "Select an dempty room."
button/0/icon = ExtResource( 10 )
button/1/text = ""
button/1/tooltip = ""
button/1/icon = ExtResource( 11 )
button/2/text = ""
button/2/tooltip = ""
button/2/icon = ExtResource( 12 )
button/3/text = ""
button/3/tooltip = ""
button/3/icon = ExtResource( 13 )
button/4/text = ""
button/4/tooltip = ""
button/4/icon = ExtResource( 14 )
button/5/text = ""
button/5/tooltip = ""
button/5/icon = ExtResource( 15 )
button/6/text = ""
button/6/tooltip = ""
button/6/icon = ExtResource( 16 )
button/7/text = ""
button/7/tooltip = ""
button/7/icon = null
button/selected = 0


